--- a/about-us.html
+++ b/about-us.html
@@ -40,6 +40,9 @@
                     <a class="nav-link-zoe active" aria-current="page" href="about-us.html">Qui sommes-nous</a>
                   </li>
                   <li class="nav-list">
+                    <a class="nav-link-zoe" href="reserver.html">Réserver</a>
+                  </li>
+                  <li class="nav-list">
                     <a class="nav-link-zoe" href="contact.html">Contact</a>
                   </li>
                 </ul>
@@ -66,6 +69,25 @@
     </header>
     <!-- /Menu de navigation -->
 
+    <div class="banniere" data-setbg="img/ban.jpg">
+      <div class="content">
+        <div class="reservation">
+          <div class="title">
+            <h2>Qui sommes-nous ?</h2>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- about-us -->
+    <div class="container about-us">
+      <div class="description">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, harum quis laudantium amet ipsa veniam corrupti dolor voluptate omnis vitae cum in inventore possimus tempora voluptas expedita. Repellendus, accusamus consequuntur!
+        Quos itaque nobis iure accusantium harum dolore voluptatibus expedita facere, quis, deserunt laboriosam quod rem et. Nisi doloribus obcaecati quae dolore necessitatibus eius architecto, fugit nobis ea maiores quam ab?
+        Quaerat velit cumque deserunt in eos consequuntur odio veritatis aperiam minima nobis adipisci iusto quae, sapiente perferendis non! Magni ipsa quisquam dignissimos sint doloremque tenetur libero cupiditate dolore nemo eligendi?</p>
+      </div>
+    </div>
+    <!-- /about-us -->
 
     <!-- Modal Login -->
     <div class="modal fade" id="login" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
