--- a/contact.html
+++ b/contact.html
@@ -40,6 +40,9 @@
                     <a class="nav-link-zoe" href="about-us.html">Qui sommes-nous</a>
                   </li>
                   <li class="nav-list">
+                    <a class="nav-link-zoe" href="reserver.html">Réserver</a>
+                  </li>
+                  <li class="nav-list">
                     <a class="nav-link-zoe active" aria-current="page" href="contact.html">Contact</a>
                   </li>
                 </ul>
@@ -66,14 +69,21 @@
     </header>
     <!-- /Menu de navigation -->
 
+    <div class="banniere" data-setbg="img/ban.jpg">
+      <div class="content">
+          <div class="reservation">
+            <div class="title">
+              <h2>Nous contacter</h2>
+            </div>
+          </div>
+      </div>
+  </div>
+
     <!-- Contact -->
     <div class="container my-5">
       <div class="row">
         <div class="col-md-9 col-sm-12">
           <div class="contact">
-            <div class="title">
-              Nous contacter
-            </div>
             <div class="description">
               Vous pouvez nous contacter par téléphone, ou e-mail. Pour poser une question spécifique via
               internet, veuillez utiliser le formulaire.
