--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <span class="fa-solid fa-bars"></span>
           </button>
           <div class="collapse navbar-collapse d-lg-flex justify-content-end" id="navbarNav">
-            <div class="row w-75">
+            <div class="row w-80">
               <div class="col-md-8">
                 <ul class="navbar-nav">
                   <li class="nav-list">
@@ -38,6 +38,9 @@
                   </li>
                   <li class="nav-list">
                     <a class="nav-link-zoe" href="about-us.html">Qui sommes-nous</a>
+                  </li>
+                  <li class="nav-list">
+                    <a class="nav-link-zoe" href="reserver.html">Réserver</a>
                   </li>
                   <li class="nav-list">
                     <a class="nav-link-zoe" href="contact.html">Contact</a>
@@ -67,7 +70,7 @@
     <!-- /Menu de navigation -->
 
     <!-- Banniere -->
-    <div class="banniere" data-setbg="img/slider/bus_2.jpg">
+    <!-- <div class="banniere" data-setbg="img/slider/bus_2.jpg">
       <div class="content">
         <div class="title">
           Passez de moment bon moment avec <span class="title-zoe">ZOE</span>
@@ -77,13 +80,66 @@
             data-bs-target="#reserved">Réserver maintenant</a>
         </div>
       </div>
+    </div> -->
+    <div id="slideHome" class="carousel slide" data-bs-ride="carousel">
+      <!-- <div class="carousel-indicators">
+        <button type="button" data-bs-target="#slideHome" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+        <button type="button" data-bs-target="#slideHome" data-bs-slide-to="1" aria-label="Slide 2"></button>
+        <button type="button" data-bs-target="#slideHome" data-bs-slide-to="2" aria-label="Slide 3"></button>
+      </div> -->
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100 set-bg" alt=" " data-setbg="img/slider/bus.jpg">
+          <div class="carousel-caption d-sm-block">
+            <h5>First slide label</h5>
+            <p>Some representative placeholder content for the first slide.</p>
+            <a href="reserver.html" class="btn-zoe-link">Réserver dès maintenant</a>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 set-bg" alt=" " data-setbg="img/slider/bus_2.jpg">
+          <div class="carousel-caption d-sm-block">
+            <h5>Second slide label</h5>
+            <p>Some representative placeholder content for the second slide.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 set-bg" alt=" " data-setbg="img/slider/bus_4.jpg">
+          <div class="carousel-caption d-sm-block">
+            <h5>Third slide label</h5>
+            <p>Some representative placeholder content for the third slide.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#slideHome" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#slideHome" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
     <!-- /Banniere -->
 
+    <!-- about-us -->
+    <div class="container about-us">
+      <div class="title">
+        <h2>Qui sommes-nous ?</h2>
+      </div>
+      <div class="description">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis, harum quis laudantium amet ipsa veniam corrupti dolor voluptate omnis vitae cum in inventore possimus tempora voluptas expedita. Repellendus, accusamus consequuntur!
+        Quos itaque nobis iure accusantium harum dolore voluptatibus expedita facere, quis, deserunt laboriosam quod rem et. Nisi doloribus obcaecati quae dolore necessitatibus eius architecto, fugit nobis ea maiores quam ab?
+        Quaerat velit cumque deserunt in eos consequuntur odio veritatis aperiam minima nobis adipisci iusto quae, sapiente perferendis non! Magni ipsa quisquam dignissimos sint doloremque tenetur libero cupiditate dolore nemo eligendi?</p>
+      </div>
+    </div>
+    <!-- /about-us -->
+
+
     <!-- grille tarifaire-->
     <div class="container main">
-      <div class="description">
-        Voici notre grille tarifaire
+      <div class="title">
+        <h2>Grille tarifaire</h2> 
       </div>
       <div class="price">
         <!-- Formulaire -->
@@ -209,6 +265,64 @@
       </div>
     </div>
     <!-- /grille tarifaire -->
+
+    <!-- FAQs -->
+    <div class="container faqs">
+      <div class="title">
+        <h2>Foire aux questions</h2>
+      </div>
+      <div class="row mt-3">
+        <div class="col-md-5 d-md-block d-none">
+          <div class="img">
+            <img src="img/faqs.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-7 col-sm-12">
+          <div class="questions">
+            <div class="accordion" id="accordionExample">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingOne">
+                  <button class="accordion-button accordion-button-zoe" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                    Accordion Item #1
+                  </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingTwo">
+                  <button class="accordion-button accordion-button-zoe  collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                    Accordion Item #2
+                  </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="headingThree">
+                  <button class="accordion-button accordion-button-zoe collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                    Accordion Item #3
+                  </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                  <div class="accordion-body">
+                    <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- /FAQs -->
+
 
     <!-- Modal details voyage -->
     <div class="modal fade" id="detailsVoyage" tabindex="-1" aria-labelledby="detailsVoyageModalLabel"
