--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -134,6 +134,7 @@
                         <tr>
                             <th>Date</th>
                             <th>Destination</th>
+                            <th>Date départ</th>
                             <th>Nombres de voyageur</th>
                             <th>Prix</th>
                             <th>status</th>
@@ -142,9 +143,48 @@
                     <tbody>
                         <tr>
                             <td>
+                                10/10/2022
+                            </td>
+                            <td>Pointe-Noire</td>
+                            <td>
+                                15/10/2022
+                            </td>
+                            <td>1</td>
+                            <td>15000 xaf</td>
+                            <td>Réserver</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                25/10/2022
+                            </td>
+                            <td>Dolisie</td>
+                            <td>
+                                1/11/2022
+                            </td>
+                            <td>1</td>
+                            <td>15000 xaf</td>
+                            <td>Réserver</td>
+                        </tr>
+                        <tr>
+                            <td>
                                 31/10/2022
                             </td>
                             <td>Brazzaville</td>
+                            <td>
+                                10/11/2022
+                            </td>
+                            <td>1</td>
+                            <td>15000 xaf</td>
+                            <td>Réserver</td>
+                        </tr>
+                        <tr>
+                            <td>
+                                11/11/2022
+                            </td>
+                            <td>Brazzaville</td>
+                            <td>
+                                16/11/2022
+                            </td>
                             <td>1</td>
                             <td>15000 xaf</td>
                             <td>Réserver</td>
