--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -80,8 +80,8 @@
       </div>
     </div>
 
-    <!-- about-us -->
-    <div class="container user-dash">
+    <!-- dash-user -->
+    <div class="container user-dash" id="user-dash">
       <div class="user-profil row">
         <div class="col-sm-12 col-md-3 col-lg-2 mb-3 mb-md-0">
             <div class="img-profil">
@@ -195,7 +195,7 @@
         </div>
       </div>
     </div>
-    <!-- /about-us -->
+    <!-- /dash-user -->
 
     <!-- Modal Login -->
     <div class="modal fade" id="login" tabindex="-1" aria-labelledby="loginModalLabel" aria-hidden="true">
