--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -129,7 +129,7 @@
         </div>
         <div class="historique">
             <div class="table-responsive">
-                <table id="example" class="table custom-table table-striped datatable">
+                <table id="user-historique" class="table custom-table table-striped datatable">
                     <thead>
                         <tr>
                             <th>Date</th>
