--- a/admin-ges-destination.html
+++ b/admin-ges-destination.html
@@ -21,9 +21,13 @@
         </div>
 
         <div class="items">
-            <li class="active"><i class="fa-solid fa-chart-pie"></i><a href="">Tableau de bord</a></li>
-            <li><i class="fa-solid fa-user-gear"></i></i><a href="">Mon compte</a></li>
-            <li id="logout"><i class="fa-solid fa-right-from-bracket"></i><a href="">Deconnexion</a></li>
+            <li><i class="fa-solid fa-chart-pie"></i><a href="admin-index.html">Tableau de bord</a></li>
+            <li><i class="fas fa-users-line"></i><a href="admin-reservation.html">Reservation clients</a></li>
+            <li class="active"><i class="fa-solid fa-location-pin"></i><a href="admin-ges-destination.html">Gestion des destination</a></li>
+            <li><i class="fa-solid fa-money-bill"></i><a href="admin-ges-tarifs.html">Gestion des tarifs</a></li>
+            <li><i class="fa-solid fa-users"></i></i><a href="admin-ges-users.html">Gestion des utilisateurs</a></li>
+            <li><i class="fa-solid fa-user-gear"></i></i><a href="admin-mon-compte.html">Mon compte</a></li>
+            <li id="logout"><i class="fa-solid fa-right-from-bracket"></i><a href="index.html">Déconnexion</a></li>
         </div>
     </section>
 
@@ -34,7 +38,7 @@
                     <i id="menu-btn" class="fas fa-bars"></i>
                 </div>
                 <div class="title">
-                    <h3>ZOE T & L</h3>
+                    <h3><span>ZOE</span> <span>T & L</span></h3>
                 </div>
             </div>
             <div class="profile">
@@ -43,7 +47,7 @@
         </div>
 
         <h3 class="i-name">
-            Tableau de bord
+            Gestion des destination
         </h3>
 
         <div class="cards row">
@@ -302,7 +306,6 @@
                 </tbody>
             </table>
         </div>
-
     </section>
 
     <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
