--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
           </div>
           <div class="modal-body">
             <div class="login">
-              <form action="">
+              <form action="client-dashboard.html">
                 <div class="form-group">
                   <label for="fullname">Nom d'utilisateur</label>
                   <input type="text" name="fullname" id="fullname" placeholder="Nom d'utilisateur">
