--- a/user-dashboard.html
+++ b/user-dashboard.html
@@ -21,9 +21,9 @@
         </div>
 
         <div class="items">
-            <li class="active"><i class="fa-solid fa-chart-pie"></i><a href="">Tableau de bord</a></li>
-            <li><i class="fa-solid fa-user-gear"></i></i><a href="">Mon compte</a></li>
-            <li id="logout"><i class="fa-solid fa-right-from-bracket"></i><a href="">Deconnexion</a></li>
+            <li class="active"><i class="fa-solid fa-chart-pie"></i><a href="user-dashboard.html">Tableau de bord</a></li>
+            <li><i class="fa-solid fa-user-gear"></i></i><a href="user-compte.html">Mon compte</a></li>
+            <li id="logout"><i class="fa-solid fa-right-from-bracket"></i><a href="index.html">Deconnexion</a></li>
         </div>
     </section>
 
@@ -34,7 +34,7 @@
                     <i id="menu-btn" class="fas fa-bars"></i>
                 </div>
                 <div class="title">
-                    <h3>ZOE T & L</h3>
+                    <h3><span>ZOE</span> <span>T & L</span></h3>
                 </div>
             </div>
             <div class="profile">
@@ -47,46 +47,37 @@
         </h3>
 
         <div class="cards row">
-            <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="carte">
                     <i class="fas fa-users"></i>
                     <div>
                         <h3>10</h3>
-                        <span>users</span>
+                        <span>Total reservation</span>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="carte">
                     <i class="fas fa-users"></i>
                     <div>
                         <h3>10</h3>
-                        <span>users</span>
+                        <span>Reservation en cour</span>
                     </div>
                 </div>
             </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="col-sm-12 col-md-6 col-lg-4">
                 <div class="carte">
                     <i class="fas fa-users"></i>
                     <div>
                         <h3>10</h3>
-                        <span>users</span>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-6 col-lg-3">
-                <div class="carte">
-                    <i class="fas fa-users"></i>
-                    <div>
-                        <h3>10</h3>
-                        <span>users</span>
+                        <span>Reservation validé</span>
                     </div>
                 </div>
             </div>
         </div>
 
         <div class="board">
-            <table width="100%" id="user-historique" class="dataTable">
+            <table width="100%" id="user-dashboard" class="dataTable">
                 <thead>
                     <tr>
                         <td>Nom</td>
@@ -119,16 +110,16 @@
                         <td class="people-price">
                             <h5>15000</h5>
                         </td>
-                        <td class="active">
+                        <td class="wait">
                             <p>Reserver</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#changeState">Edit</a></td>
                     </tr>
                     <tr>
                         <td class="people">
                             <img src="img/profile/profile.png" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
+                                <h5>Manou Loemba</h5>
                                 <p>(+242) 066065050</p>
                             </div>
                         </td>
@@ -145,15 +136,40 @@
                             <h5>15000</h5>
                         </td>
                         <td class="active">
-                            <p>Reserver</p>
+                            <p>Ok</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"></td>
                     </tr>
                     <tr>
                         <td class="people">
                             <img src="img/profile/profile.png" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
+                                <h5>Sara Loemba</h5>
+                                <p>(+242) 066065050</p>
+                            </div>
+                        </td>
+                        <td class="people-destination">
+                            <h5>Brazzaville</h5>
+                        </td>
+                        <td class="people-date">
+                            <h5>26/11/2022</h5>
+                        </td>
+                        <td class="people-count">
+                            <h5>1</h5>
+                        </td>
+                        <td class="people-price">
+                            <h5>15000</h5>
+                        </td>
+                        <td class="wait">
+                            <p>Reserver</p>
+                        </td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#changeState">Edit</a></td>
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <img src="img/profile/profile.png" alt="">
+                            <div class="people-name">
+                                <h5>Ariel Tatiana</h5>
                                 <p>(+242) 066065050</p>
                             </div>
                         </td>
@@ -170,15 +186,40 @@
                             <h5>15000</h5>
                         </td>
                         <td class="active">
-                            <p>Reserver</p>
+                            <p>Ok</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"></td>
                     </tr>
                     <tr>
                         <td class="people">
                             <img src="img/profile/profile.png" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
+                                <h5>Mikael Sitou</h5>
+                                <p>(+242) 066065050</p>
+                            </div>
+                        </td>
+                        <td class="people-destination">
+                            <h5>Brazzaville</h5>
+                        </td>
+                        <td class="people-date">
+                            <h5>26/11/2022</h5>
+                        </td>
+                        <td class="people-count">
+                            <h5>1</h5>
+                        </td>
+                        <td class="people-price">
+                            <h5>15000</h5>
+                        </td>
+                        <td class="wait">
+                            <p>Reserver</p>
+                        </td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#changeState">Edit</a></td>
+                    </tr>
+                    <tr>
+                        <td class="people">
+                            <img src="img/profile/profile.png" alt="">
+                            <div class="people-name">
+                                <h5>Ange Abigael</h5>
                                 <p>(+242) 066065050</p>
                             </div>
                         </td>
@@ -195,15 +236,15 @@
                             <h5>15000</h5>
                         </td>
                         <td class="active">
-                            <p>Reserver</p>
+                            <p>Ok</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"></td>
                     </tr>
                     <tr>
                         <td class="people">
                             <img src="img/profile/profile.png" alt="">
                             <div class="people-name">
-                                <h5>Alexander Poaty</h5>
+                                <h5>Jojo Mvo</h5>
                                 <p>(+242) 066065050</p>
                             </div>
                         </td>
@@ -219,91 +260,37 @@
                         <td class="people-price">
                             <h5>15000</h5>
                         </td>
-                        <td class="active">
+                        <td class="wait">
                             <p>Reserver</p>
                         </td>
-                        <td class="edit"><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td class="people">
-                            <img src="img/profile/profile.png" alt="">
-                            <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
-                            </div>
-                        </td>
-                        <td class="people-destination">
-                            <h5>Brazzaville</h5>
-                        </td>
-                        <td class="people-date">
-                            <h5>26/11/2022</h5>
-                        </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td class="people">
-                            <img src="img/profile/profile.png" alt="">
-                            <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
-                            </div>
-                        </td>
-                        <td class="people-destination">
-                            <h5>Brazzaville</h5>
-                        </td>
-                        <td class="people-date">
-                            <h5>26/11/2022</h5>
-                        </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
-                    </tr>
-                    <tr>
-                        <td class="people">
-                            <img src="img/profile/profile.png" alt="">
-                            <div class="people-name">
-                                <h5>Alexander Poaty</h5>
-                                <p>(+242) 066065050</p>
-                            </div>
-                        </td>
-                        <td class="people-destination">
-                            <h5>Brazzaville</h5>
-                        </td>
-                        <td class="people-date">
-                            <h5>26/11/2022</h5>
-                        </td>
-                        <td class="people-count">
-                            <h5>1</h5>
-                        </td>
-                        <td class="people-price">
-                            <h5>15000</h5>
-                        </td>
-                        <td class="active">
-                            <p>Reserver</p>
-                        </td>
-                        <td class="edit"><a href="">Edit</a></td>
+                        <td class="edit"><a href="" data-bs-toggle="modal" data-bs-target="#changeState">Edit</a></td>
                     </tr>
                 </tbody>
             </table>
         </div>
 
     </section>
+
+    <!-- Change statut reservation -->
+    <div class="modal fade" id="changeState" tabindex="-1" aria-labelledby="changeStateLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="content-modal text-center">
+                <h5>Validation de la réservation</h5>
+                <div class="button-action">
+                    <a href="">Oui</a>
+                    <a href="">Non</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>      
+    <!-- >Change statut reservation -->
 
     <script src="./vendors/jquery/jquery-3.6.1.min.js"></script>
     <script src="./vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
