--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
               <i class="fas fa-bars"></i>
           </button>
           <ul class="menu-lg">
-              <li><a href="">Accueil</a></li>
-              <li><a href="">Nos services</a></li>
-              <li><a href="">Contact</a></li>
-              <li><a href="">Réserver</a></li>
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="nos-services">Nos services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="reserver.html">Réserver</a></li>
           </ul>
-          <a href="" class="button">Connexion</a>
+          <a href="login.html" class="button">Connexion</a>
       </nav>
       <div class="content">
           <h1>Bienvenue chez <span>ZOE</span></h1>
@@ -43,11 +43,11 @@
       </div>
       <div class="menu-wrapper" id="menu-wrapper">
           <ul>
-              <li><a href="">Accueil</a></li>
-              <li><a href="">Nos services</a></li>
-              <li><a href="">Contact</a></li>
-              <li><a href="">Réserver</a></li>
-              <li><a href="">Connexion</a></li>
+              <li><a href="index.html">Accueil</a></li>
+              <li><a href="nos-services">Nos services</a></li>
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="reserver.html">Réserver</a></li>
+              <li><a href="login.html">Connexion</a></li>
           </ul>
       </div>
   </div>
@@ -185,10 +185,13 @@
                               <a class="footer-link" aria-current="page" href="index.html">Accueil</a>
                           </li>
                           <li class="footer-list">
-                              <a class="footer-link" href="about-us.html">Qui sommes-nous</a>
+                              <a class="footer-link" href="nos-services.html">Nos services</a>
                           </li>
                           <li class="footer-list">
                               <a class="footer-link" href="contact.html">Contact</a>
+                          </li>
+                          <li class="footer-list">
+                              <a class="footer-link" href="reserver.html">Résever</a>
                           </li>
                       </ul>
                   </div>
